[FIXED JENKINS-11755] word wrapping in text section.

--- a/src/main/webapp/sectioned-view.css
+++ b/src/main/webapp/sectioned-view.css
@@ -3,6 +3,7 @@
   border-width: 1px;
   padding: 10px;
   text-align: left;
+  white-space: normal;
 }
 
 .sectioned-view-note h3, .sectioned-view-warning h3, .sectioned-view-info h3, .sectioned-view-tip h3 {
